import "common/expression.proto";
import "common/types.proto";
import "common/language.proto";
import "common/referenceduri.proto";

package apsara.odps.lot;

option java_outer_classname = "LanguageSinkProtos";

message LanguageSink
{
    required Language Language = 1;
    repeated group Resources = 2
    {
        required string Project = 1;
        required string ResourceName = 2;
    };
    required string ClassName = 3;
    repeated ReferencedURI URIs = 4;
    repeated group Output = 5
    {
        required Reference Column = 1;
        required Type Type = 2;
    };
    required uint32 InstanceCount = 6;
    repeated group Properties = 7
    {
        required string Key = 1;
        required string Value = 2;
    }
}
